[gd_scene load_steps=10 format=3 uid="uid://707wjyjp2s4q"]

[ext_resource type="Script" uid="uid://cyeqivtl4t374" path="res://scenes/base_warrior.gd" id="1_byylp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_torso"]
size = Vector2(20, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_head"]
size = Vector2(18, 18)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lowerarm"]
radius = 3.5
height = 26.0

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_43khk"]
friction = 0.3
bounce = 0.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lowerleg"]
radius = 4.0
height = 28.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_healthbg"]
bg_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_healthfill_default"]
bg_color = Color(0.262745, 0.870588, 0.392157, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byylp"]
size = Vector2(182, 20)

[node name="BaseWarrior" type="Node2D"]
script = ExtResource("1_byylp")

[node name="Torso" type="RigidBody2D" parent="."]
mass = 1.5
sleeping = true
linear_damp_mode = 1
linear_damp = 1.5
angular_damp_mode = 1
angular_damp = 3.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="Torso"]
color = Color(0.3, 0.5, 0.8, 1)
polygon = PackedVector2Array(-10, -20, 10, -20, 10, 20, -10, 20)

[node name="Collision" type="CollisionShape2D" parent="Torso"]
shape = SubResource("RectangleShape2D_torso")

[node name="BowPivot" type="Node2D" parent="Torso"]
unique_name_in_owner = true
position = Vector2(0, -10)

[node name="BowVisual" type="Polygon2D" parent="Torso/BowPivot"]
unique_name_in_owner = true
position = Vector2(34, 10)
color = Color(0.5, 0.3, 0.1, 1)
polygon = PackedVector2Array(0, -15, 5, 0, 0, 15, -2, 15, -3, 0, -2, -15)

[node name="ArrowSpawnPoint" type="Marker2D" parent="Torso/BowPivot"]
unique_name_in_owner = true
position = Vector2(39, 10)
metadata/_edit_group_ = true

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2(0, -30)
collision_mask = 13
mass = 0.8
sleeping = true
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 2.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="Head"]
color = Color(0.9, 0.7, 0.5, 1)
polygon = PackedVector2Array(-9, -9, 9, -9, 9, 9, -9, 9)

[node name="Collision" type="CollisionShape2D" parent="Head"]
shape = SubResource("RectangleShape2D_head")

[node name="LowerArmL" type="RigidBody2D" parent="."]
position = Vector2(-13, -7)
collision_mask = 13
mass = 0.4
sleeping = true
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 2.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="LowerArmL"]
rotation = 1.5708
color = Color(0.9, 0.7, 0.5, 1)
polygon = PackedVector2Array(-13, -3.5, 13, -3.5, 13, 3.5, -13, 3.5)

[node name="Collision" type="CollisionShape2D" parent="LowerArmL"]
shape = SubResource("CapsuleShape2D_lowerarm")

[node name="LowerArmR" type="RigidBody2D" parent="."]
position = Vector2(14, -7)
collision_mask = 13
mass = 0.4
physics_material_override = SubResource("PhysicsMaterial_43khk")
sleeping = true
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 2.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="LowerArmR"]
rotation = 1.5708
color = Color(0.9, 0.7, 0.5, 1)
polygon = PackedVector2Array(-13, -3.5, 13, -3.5, 13, 3.5, -13, 3.5)

[node name="Collision" type="CollisionShape2D" parent="LowerArmR"]
shape = SubResource("CapsuleShape2D_lowerarm")

[node name="LowerLegL" type="RigidBody2D" parent="."]
position = Vector2(-6, 33)
collision_mask = 13
mass = 0.5
sleeping = true
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 2.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="LowerLegL"]
rotation = 1.5708
color = Color(0.9, 0.7, 0.5, 1)
polygon = PackedVector2Array(-14, -4, 14, -4, 14, 4, -14, 4)

[node name="Collision" type="CollisionShape2D" parent="LowerLegL"]
shape = SubResource("CapsuleShape2D_lowerleg")

[node name="LowerLegR" type="RigidBody2D" parent="."]
position = Vector2(5, 33)
collision_mask = 13
mass = 0.5
sleeping = true
linear_damp_mode = 1
linear_damp = 1.0
angular_damp_mode = 1
angular_damp = 2.0
metadata/_edit_group_ = true

[node name="Visual" type="Polygon2D" parent="LowerLegR"]
rotation = 1.5708
color = Color(0.9, 0.7, 0.5, 1)
polygon = PackedVector2Array(-14, -4, 14, -4, 14, 4, -14, 4)

[node name="Collision" type="CollisionShape2D" parent="LowerLegR"]
shape = SubResource("CapsuleShape2D_lowerleg")

[node name="Joint_Torso_Head" type="PinJoint2D" parent="."]
position = Vector2(0, -20)
node_a = NodePath("../Torso")
node_b = NodePath("../Head")
angular_limit_enabled = true
angular_limit_lower = -0.785398
angular_limit_upper = 0.785398

[node name="Joint_Torso_UpperArmL" type="PinJoint2D" parent="."]
position = Vector2(-10, -18)
node_a = NodePath("../Torso")
node_b = NodePath("../LowerArmL")
angular_limit_enabled = true
angular_limit_lower = -1.5708
angular_limit_upper = 1.5708

[node name="Joint_Torso_UpperArmR" type="PinJoint2D" parent="."]
position = Vector2(10, -18)
node_a = NodePath("../Torso")
node_b = NodePath("../LowerArmR")
angular_limit_enabled = true
angular_limit_lower = -1.5708
angular_limit_upper = 1.5708

[node name="Joint_Torso_UpperLegL" type="PinJoint2D" parent="."]
position = Vector2(-7, 20)
node_a = NodePath("../Torso")
node_b = NodePath("../LowerLegL")
angular_limit_enabled = true
angular_limit_lower = -0.0174533
angular_limit_upper = 0.0174533

[node name="Joint_UpperLegR_LowerLegR" type="PinJoint2D" parent="."]
position = Vector2(6, 20)
node_a = NodePath("../Torso")
node_b = NodePath("../LowerLegR")
angular_limit_enabled = true
angular_limit_lower = -0.0174533
angular_limit_upper = 0.0174533

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -12.0
offset_top = -53.0
offset_right = 13.0
offset_bottom = -45.0
theme_override_styles/background = SubResource("StyleBoxFlat_healthbg")
theme_override_styles/fill = SubResource("StyleBoxFlat_healthfill_default")
value = 100.0
show_percentage = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]
top_level = true
position = Vector2(0, 57)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(30, 0)
shape = SubResource("RectangleShape2D_byylp")

[node name="Camera2D" type="Camera2D" parent="."]
